navbar issue on safari ( cause post view under navbar )

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -123,8 +123,8 @@ nst-navbar {
   will-change: height;
   transform-origin: top;
   transform-style: preserve-3d;
-  backface-visibility: hidden;
-  transform: matrix3d(1,0,0.00,0,0.00,1,0.00,0,0,0,1,0,0,0,1,1);
+  //backface-visibility: hidden;
+  //transform: matrix3d(1,0,0.00,0,0.00,1,0.00,0,0,0,1,0,0,0,1,1);
   * {
     transform-origin: top;
   }
